fix: add page-center class and align 404 page

--- a/src/styles.css
+++ b/src/styles.css
@@ -44,5 +44,8 @@ body {
 .onboarding-bg {
   background-image: url(https://ik.imagekit.io/devparty/tr:w-,h-/https://assets.devparty.io/images/patterns/1.svg);
   background-size: 30%;
+}
+
+.page-center {
   @apply flex justify-center items-center h-[calc(100vh-64px)];
 }
